--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
               <a href="#">Ru</a>
               <a class="active" href="#">En</a>
             </div>
-            <a class="header__phone" href="#">+371000000</a>
+						<div class="header__phone-container">
+							<img class="header__phone-img" src="img/phone-solid.svg" alt="">
+							<a class="header__phone" href="#">+371000000</a>
+						</div>
           </div>
         </div>
       </div>
@@ -214,6 +217,17 @@
 								injected humour, or randomised words which don't look even
 								slightly believable.
 							</p>
+							<div class="news__views">
+								<div class="news__views-left">
+									<img class="news__watch" src="img/108141.png" alt="#">
+										10-02-2024
+										14:31
+									</div>
+								<div class="news__views-right">
+									<img class="icon-eye" src="img/eye_3917112.png" alt="">
+									4024
+								</div>
+							</div>
 						</div>
           </a>
         </div>
@@ -228,6 +242,17 @@
 								injected humour, or randomised words which don't look even
 								slightly believable.
 							</p>
+							<div class="news__views">
+								<div class="news__views-left">
+									<img class="news__watch" src="img/108141.png" alt="#">
+										20-01-2024
+										13:37
+									</div>
+								<div class="news__views-right">
+									<img class="icon-eye" src="img/eye_3917112.png" alt="">
+									3132
+								</div>
+							</div>
 						</div>
           </a>
         </div>
@@ -242,6 +267,19 @@
 								injected humour, or randomised words which don't look even
 								slightly believable.
 							</p>
+							
+								<div class="news__views">
+									<div class="news__views-left">
+										<img class="news__watch" src="img/108141.png" alt="#">
+											23-01-2024
+											23:37
+										</div>
+									<div class="news__views-right">
+										<img class="icon-eye" src="img/eye_3917112.png" alt="">
+										3241
+									</div>
+								</div>
+							</div>
 						</div>
           </a>
         </div>
