--- a/opened_product.html
+++ b/opened_product.html
@@ -20,7 +20,10 @@
               <a href="#">Ru</a>
               <a class="active" href="#">En</a>
             </div>
-            <a class="header__phone" href="#">+371000000</a>
+						<div class="header__phone-container">
+							<img class="header__phone-img" src="img/phone-solid.svg" alt="">
+							<a class="header__phone" href="#">+371000000</a>
+						</div>
           </div>
         </div>
       </div>
