--- a/index.html
+++ b/index.html
@@ -219,12 +219,12 @@
 							</p>
 							<div class="news__views">
 								<div class="news__views-left">
-									<img class="news__watch" src="img/108141.png" alt="#">
+									<img class="news__watch" src="img/clock-solid.svg" alt="#">
 										10-02-2024
 										14:31
 									</div>
 								<div class="news__views-right">
-									<img class="icon-eye" src="img/eye_3917112.png" alt="">
+									<img class="icon-eye" src="img/eye-solid.svg" alt="">
 									4024
 								</div>
 							</div>
@@ -244,12 +244,12 @@
 							</p>
 							<div class="news__views">
 								<div class="news__views-left">
-									<img class="news__watch" src="img/108141.png" alt="#">
+									<img class="news__watch" src="img/clock-solid.svg" alt="#">
 										20-01-2024
 										13:37
 									</div>
 								<div class="news__views-right">
-									<img class="icon-eye" src="img/eye_3917112.png" alt="">
+									<img class="icon-eye" src="img/eye-solid.svg" alt="">
 									3132
 								</div>
 							</div>
@@ -270,12 +270,12 @@
 							
 								<div class="news__views">
 									<div class="news__views-left">
-										<img class="news__watch" src="img/108141.png" alt="#">
+										<img class="news__watch" src="img/clock-solid.svg" alt="#">
 											23-01-2024
 											23:37
 										</div>
 									<div class="news__views-right">
-										<img class="icon-eye" src="img/eye_3917112.png" alt="">
+										<img class="icon-eye" src="img/eye-solid.svg" alt="">
 										3241
 									</div>
 								</div>
