creating a page news page

--- a/news.html
+++ b/news.html
@@ -142,6 +142,131 @@
 								</div>
 							</div>
 						</a>
+						<div class="news__block">
+							<a href="" class="news__item">
+								<img class="news__img" src="img/product1 1 (1).jpg" alt="" />
+								<div class="news__content">
+									<h3 class="news__title">Lavazza coffee</h3>
+									<p class="news__text">
+										There are many variations of passages of Lorem Ipsum available,
+										but the majority have suffered alteration in some form, by
+										injected humour, or randomised words which don't look even
+										slightly believable.
+									</p>
+									<div class="news__views">
+										<div class="news__views-left">
+											<img class="news__watch" src="img/clock-solid.svg" alt="#">
+												10-02-2024
+												14:31
+											</div>
+										<div class="news__views-right">
+											<img class="icon-eye" src="img/eye-solid.svg" alt="">
+											4024
+										</div>
+									</div>
+								</div>
+							</a>
+						</div>
+						<div class="news__block">
+							<a href="" class="news__item">
+								<img class="news__img" src="img/product1 1.jpg" alt="" />
+								<div class="news__content">
+									<h3 class="news__title">Lavazza coffee</h3>
+									<p class="news__text">
+										There are many variations of passages of Lorem Ipsum available,
+										but the majority have suffered alteration in some form, by
+										injected humour, or randomised words which don't look even
+										slightly believable.
+									</p>
+									<div class="news__views">
+										<div class="news__views-left">
+											<img class="news__watch" src="img/clock-solid.svg" alt="#">
+												10-02-2024
+												14:31
+											</div>
+										<div class="news__views-right">
+											<img class="icon-eye" src="img/eye-solid.svg" alt="">
+											4024
+										</div>
+									</div>
+								</div>
+							</a>
+						</div>
+						<div class="news__block">
+							<a href="" class="news__item">
+								<img class="news__img" src="img/product1 1 (2).jpg" alt="" />
+								<div class="news__content">
+									<h3 class="news__title">Lavazza coffee</h3>
+									<p class="news__text">
+										There are many variations of passages of Lorem Ipsum available,
+										but the majority have suffered alteration in some form, by
+										injected humour, or randomised words which don't look even
+										slightly believable.
+									</p>
+									<div class="news__views">
+										<div class="news__views-left">
+											<img class="news__watch" src="img/clock-solid.svg" alt="#">
+												10-02-2024
+												14:31
+											</div>
+										<div class="news__views-right">
+											<img class="icon-eye" src="img/eye-solid.svg" alt="">
+											4024
+										</div>
+									</div>
+								</div>
+							</a>
+						</div>
+						<div class="news__block">
+							<a href="" class="news__item">
+								<img class="news__img" src="img/product1 1.jpg" alt="" />
+								<div class="news__content">
+									<h3 class="news__title">Lavazza coffee</h3>
+									<p class="news__text">
+										There are many variations of passages of Lorem Ipsum available,
+										but the majority have suffered alteration in some form, by
+										injected humour, or randomised words which don't look even
+										slightly believable.
+									</p>
+									<div class="news__views">
+										<div class="news__views-left">
+											<img class="news__watch" src="img/clock-solid.svg" alt="#">
+												10-02-2024
+												14:31
+											</div>
+										<div class="news__views-right">
+											<img class="icon-eye" src="img/eye-solid.svg" alt="">
+											4024
+										</div>
+									</div>
+								</div>
+							</a>
+						</div>
+						<div class="news__block">
+							<a href="" class="news__item">
+								<img class="news__img" src="img/product1 1 (2).jpg" alt="" />
+								<div class="news__content">
+									<h3 class="news__title">Lavazza coffee</h3>
+									<p class="news__text">
+										There are many variations of passages of Lorem Ipsum available,
+										but the majority have suffered alteration in some form, by
+										injected humour, or randomised words which don't look even
+										slightly believable.
+									</p>
+									<div class="news__views">
+										<div class="news__views-left">
+											<img class="news__watch" src="img/clock-solid.svg" alt="#">
+												10-02-2024
+												14:31
+											</div>
+										<div class="news__views-right">
+											<img class="icon-eye" src="img/eye-solid.svg" alt="">
+											4024
+										</div>
+									</div>
+								</div>
+							</a>
+						</div>
 					</div>
 				</div>
 
