--- a/page-news.html
+++ b/page-news.html
@@ -65,7 +65,7 @@
           <img class="info__img-1" src="img/product1 1.jpg" alt="" />
         </div>
         <div class="info__item">
-          <div class="info__title">Lavazza coffee</div>
+          <div class="info__title"><a href="">Lavazza coffee</a></div>
 
           <div class="info_text-1">
             There are many variations of passages of Lorem Ipsum available, but
@@ -83,7 +83,7 @@
           <img class="info__img-1" src="img/product1 1 (2).jpg" alt="" />
         </div>
         <div class="info__item">
-          <div class="info__title">Lavazza coffee</div>
+          <div class="info__title"><a href="">Lavazza coffee</a></div>
 
           <div class="info_text-1">
             There are many variations of passages of Lorem Ipsum available, but
@@ -101,7 +101,7 @@
           <img class="info__img-1" src="img/product1 1 (1).jpg" alt="" />
         </div>
         <div class="info__item">
-          <div class="info__title">Lavazza coffee</div>
+          <div class="info__title"><a href="">Lavazza coffee</a></div>
 
           <div class="info_text-1">
             There are many variations of passages of Lorem Ipsum available, but
@@ -121,7 +121,7 @@
           <img class="info__img-1" src="img/product1 1 (2).jpg" alt="" />
         </div>
         <div class="info__item">
-          <div class="info__title">Lavazza coffee</div>
+          <div class="info__title"><a href="">Lavazza coffee</a></div>
 
           <div class="info_text-1">
             There are many variations of passages of Lorem Ipsum available, but
@@ -143,7 +143,7 @@
           <img class="info__img-1" src="img/product1 1 (1).jpg" alt="" />
         </div>
         <div class="info__item">
-          <div class="info__title">Lavazza coffee</div>
+          <div class="info__title"><a href="">Lavazza coffee</a></div>
 
           <div class="info_text-1">
             There are many variations of passages of Lorem Ipsum available, but
@@ -153,6 +153,15 @@
             available, but the majority have suffered alteration in some form,
             by injected humour, or randomised words which don't look even
             slightly believable. Lorem ipsum dolor sit, amet consectetur
+														<div class="news__views-left">
+									<img class="news__watch" src="img/clock-solid.svg" alt="#">
+										10-02-2024
+										14:31
+									</div>
+								<div class="news__views-right">
+									<img class="icon-eye" src="img/eye-solid.svg" alt="">
+									4024
+								</div>
           </div>
         </div>
       </div>
@@ -161,7 +170,7 @@
           <img class="info__img-1" src="img/product1 1.jpg" alt="" />
         </div>
         <div class="info__item">
-          <div class="info__title">Lavazza coffee</div>
+          <div class="info__title"><a href="">Lavazza coffee</a></div>
 
           <div class="info_text-1">
             There are many variations of passages of Lorem Ipsum available, but
